<resources>
    <string-array name="musculos">
        <item name="Todos">Todos</item>
        <item name="Peito">Peito</item>
        <item name="Deltoide Anterior">Deltoide Anterior</item>
        <item name="Deltoide Medial">Deltoide Medial</item>
        <item name="Deltoide Posterior">Deltoide Posterior</item>
        <item name="Trapézio">Trapézio</item>
        <item name="Dorsal">Dorsal</item>
        <item name="Lombar">Lombar</item>
        <item name="Triceps">Triceps</item>
        <item name="Biceps">Biceps</item>
        <item name="Glúteos">Glúteos</item>
        <item name="Quadriceps">Quadriceps</item>
        <item name="Posterior da Coxa">Posterior da Coxa</item>
        <item name="Gémeos">Gémeos</item>
        <item name="Abdominais">Abdominais</item>
    </string-array>
    <string-array name="periodoTempo">
        <item name="Último Mês">Último mês</item>
        <item name="Últimos 6 Meses">Últimos seis meses</item>
        <item name="Último Ano">Último ano</item>
        <item name="Sempre">Sempre</item>
    </string-array>
    <string name="app_name">Selfit</string>
    <string name="password">Palavra-passe</string>
    <string name="nomeUser" translatable="false">Utilizador</string>
    <string name="noUsername">O nome de utilizador não pode estar vazio.</string>
    <string name="noPassword">A palavra passe não pode estar vazia.</string>
    <string name="preferencesFile">preferencesFile</string>
    <string name="keepMeLogged">Manter sessão iniciada</string>
    <string name="connectionError">Erro ao conectar ao servidor</string>
    <string name="erro">Erro de implementação.</string>
    <string name="credenciaisInvalidas">Credenciais inválidas</string>
    <string name="logout">Logout</string>
    <string name="invalidToken">Token de acesso inválido. Sessão terminada</string>
    <string name="loggedOut">Sessão terminada</string>
    <string name="progresso">Progresso</string>
    <string name="exercicios">Exercícios</string>
    <string name="alimentos">Alimentos</string>
    <string name="treinos">Treinos</string>
    <string name="medidaMaisRecente">Quantidades para manter peso</string>
    <string name="quantConsum">Quantidade já consumida</string>
    <string name="mainpage">Página Principal</string>
    <string name="recMaq">Insira a imagem para a aplicação identificar qual é a máquina.</string>
    <string name="nome">"Nome: "</string>
    <string name="calorias">Calorias</string>
    <string name="proteinas">Proteinas</string>
    <string name="hidratos">Hidratos de Carbono</string>
    <string name="lipidos">Lípidos</string>
    <string name="musculosTrabalhados">Músculos trabalhados: </string>
    <string name="melhorPerformance">"Melhor performance: "</string>
    <string name="maquina">Máquinas:</string>
    <string name="refeicoes">Refeições</string>
    <string name="treinoDiario">Treino Diário</string>
    <string name="pequenoAlmoco">Pequeno Almoço</string>
    <string name="almoco">Almoço</string>
    <string name="lanche">Lanche</string>
    <string name="jantar">Jantar</string>
    <string name="adicionar">Adicionar</string>
    <string name="guardar">Guardar</string>
    <string name="carregarTreino">Carregar Treino</string>
    <string name="peso">Peso: </string>
    <string name="repeticoes">Repetições: </string>
    <string name="series">Séries: </string>
    <string name="noPeso">O peso não pode estar vazio</string>
    <string name="noRepeticoes">As repetições não podem estar vazias</string>
    <string name="noSeries">As séries não podem estar vazias</string>
    <string name="alterar">Alterar</string>
    <string name="remover">Remover</string>
    <string name="exercicioJaNoTreino">Este exercício já se encontra no treino</string>
    <string name="alimentoJaNaRefeicao">Este alimento já se encontra na refeição</string>
    <string name="quantidade">Quantidade: </string>
    <string name="noQuantidade">A quantidade não pode estar vazia</string>
    <string name="registoFuturo">Não é possível efetuar registos numa data futura</string>
    <string name="registoSucesso">Registo efetuado com sucesso</string>
    <string name="naoPedirMedidas">Não pedir medidas corporais automaticamente todas as semanas</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="percent">%</string>
    <string name="pedirMedidasText">Será pedido semanalmente para inserir as suas medidas corporais atuais, bem como as suas metas, para serem criados gráficos com o seu progresso. Pode desligar esta funcionalidade e inserir os dados manualmente quando quiseres, tendo pelo menos um intervalo de uma semana entre registos.</string>
    <string name="altura">Altura:</string>
    <string name="pesoMeta">Meta de peso:</string>
    <string name="percentGordura">Percentagem de gordura:</string>
    <string name="metaGordura">Meta de gordura:</string>
    <string name="cancelar">Cancelar</string>
    <string name="noAltura">A altura não pode estar vazia</string>
    <string name="noPesoMeta">O peso meta não pode estar vazio</string>
    <string name="noGordura">A percentagem de gordura não pode estar vazia</string>
    <string name="noMetaGordura">A meta de percentagem de gordura não pode estar vazia</string>
    <string name="naoPassouUmaSemana">Ainda não passaram 7 dias desde o último registo de medidas</string>
    <string name="periodoTempo">Período de Tempo:</string>
    <string name="pesoProg">Peso (kg)</string>
    <string name="gordProg">Gordura corporal (%)</string>
    <string name="noMeasurements">Não é possível apresentar os valores nutricionais recomedados para este dia por falta de medidas corporais na data</string>
    <string name="ReconhecimentoMaquina">Máquinas</string>
</resources>