<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="340dp"
    android:layout_height="600dp"
    android:background="#CCC6C6">

    <ImageView
        android:id="@+id/exercicioDetalhesImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/exercicioDetalhesDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercicioDetalhesName"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/exercicioDetalhesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/exercicioDetalhesImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exercicioDetalhesDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercicioDetalhesImage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentAdicionarExercicioAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercicioDetalhesDescription">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            app:layout_constraintBottom_toTopOf="@+id/textView9"
            app:layout_constraintEnd_toStartOf="@+id/fragmentAdicionarExercicioPeso"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeticoes"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toStartOf="@+id/fragmentAdicionarExercicioRepeticoes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fragmentAdicionarExercicioSeries"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/fragmentAdicionarExercicioPeso"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/fragmentAdicionarExercicioRepeticoes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fragmentAdicionarExercicioRepeticoes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/fragmentAdicionarExercicioSeries"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/fragmentAdicionarExercicioPeso" />

        <EditText
            android:id="@+id/fragmentAdicionarExercicioSeries"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/fragmentAdicionarExercicioRepeticoes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/fragmentAdicionarExercicioAddBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <Button
        android:id="@+id/fragmentAdicionarExercicioEditBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/fragmentAdicionarExercicioRmBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdicionarExercicioAddBtn" />

    <Button
        android:id="@+id/fragmentAdicionarExercicioRmBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/remover"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fragmentAdicionarExercicioEditBtn"
        app:layout_constraintTop_toTopOf="@+id/fragmentAdicionarExercicioAddBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>